cabal-version: 2.1

name:
  slay-cairo

version:
  0

build-type:
  Simple

library

  exposed-modules:
    Slay.Cairo
    Slay.Cairo.Element
    Slay.Cairo.Prim
    Slay.Cairo.Prim.Color
    Slay.Cairo.Prim.Rect
    Slay.Cairo.Prim.Text
    Slay.Cairo.Prim.Curve
    Slay.Cairo.Prim.Circle

  build-depends:
    base,
    inj,
    text,
    cairo,
    pango,
    hashable,
    lrucaching,
    num-non-negative,
    slay-core

  hs-source-dirs:
    src

  default-language:
    Haskell2010

  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveGeneric
    DeriveFunctor
    DeriveFoldable
    DeriveTraversable
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiWayIf
    NegativeLiterals
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    RankNTypes
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -Wall
