name:
  slay-gtk

version:
  0

build-type:
  Simple

cabal-version:
  >=1.10

library

  exposed-modules:
    Slay.Gtk

  build-depends:
    base,
    cairo,
    pango,
    gtk3,
    transformers,
    text,
    microlens-platform,
    slay-cairo

  hs-source-dirs:
    src

  default-language:
    Haskell2010

  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveGeneric
    DeriveFunctor
    DeriveFoldable
    DeriveTraversable
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NegativeLiterals
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    RankNTypes
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -Wall
    -Wno-missing-pattern-synonym-signatures
    -threaded

executable slay-gtk-example
  main-is:
    Main.hs
  build-depends:
    base, slay-gtk
  default-language:
    Haskell2010
  ghc-options:
    -threaded -O2
