cabal-version: 2.1

name:
  slay-gtk

version:
  0

build-type:
  Simple

library

  exposed-modules:
    Slay.Gtk
    Slay.Gtk.Phaser
    Slay.Gtk.PreMatrix
    Slay.Gtk.KeyCode
    Slay.Gtk.Util

  build-depends:
    base,
    inj,
    inj-base,
    cairo,
    pango,
    gtk3,
    transformers,
    text,
    microlens-platform,
    template-haskell,
    slay-number-double,
    slay-combinators,
    slay-cairo

  mixins:
    slay-number-double (Slay.Number.Double as Slay.Number)

  hs-source-dirs:
    src

  default-language:
    Haskell2010

  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveGeneric
    DeriveFunctor
    DeriveFoldable
    DeriveTraversable
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NegativeLiterals
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    RankNTypes
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -Wall
    -Wno-missing-pattern-synonym-signatures

executable slay-gtk-example
  main-is:
    Main.hs
  build-depends:
    base, slay-gtk
  default-language:
    Haskell2010
  ghc-options:
    -threaded -O2
