name:
  slay-vty

version:
  0

build-type:
  Simple

cabal-version:
  >=2.1

library

  exposed-modules:
    Slay.Vty
    Slay.Vty.Render
    Slay.Vty.Prim

  build-depends:
    base,
    vty,
    slay-core,
    slay-number-int

  mixins:
    slay-number-int (Slay.Number.Int as Slay.Number)

  hs-source-dirs:
    src

  default-language:
    Haskell2010

  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveGeneric
    DeriveFunctor
    DeriveFoldable
    DeriveTraversable
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiWayIf
    NegativeLiterals
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    RankNTypes
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -Wall
